--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:ssg": "node scripts/ssg-build.js",
+    "deploy": "node scripts/deploy.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
+    "preview:ssg": "vite preview --outDir dist/client",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -26,12 +29,14 @@
     "react-dom": "^19.1.0",
     "react-player": "^3.3.1",
     "react-router": "^7.6.3",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/node": "^24.2.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
@@ -44,6 +49,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.3"
+    "vite": "^7.0.3",
+    "vite-plugin-ssr": "^0.4.142"
   }
 }
