--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/three": "^0.178.0",
     "gsap": "^3.13.0",
     "leva": "^0.10.0",
+    "motion": "^12.23.12",
     "r3f-forcegraph": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
