Added and tweeked Desktop animations, fixed small font size on desktop and changed Info font styles for more coherence

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "r3f-forcegraph": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-player": "^3.3.1",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.8.0",
